Jump load fix

--- a/frontend/src/components/users/user_show.css
+++ b/frontend/src/components/users/user_show.css
@@ -120,6 +120,10 @@
   font-weight: bold;
 }
 
+.invite-host {
+  width: 50vw;
+}
+
 .text-info{
   margin: 10px;
   width: 32vw;
